# pdfplumberwrapper

./: .gitignore  README.md  cli.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: api_reference.md  cli_guide.md  contributing_guide.md  getting_started.md  index.md  installation.md
pdf_parser/: __init__.py  core.py
tests/: test_cli.py  test_core.py
tests/files/: test_pdf_core_parsed.txt
